<resources>
    <string name="app_name">SciNFish</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="missionLine1">LINKING SCIENTISTS AND</string>
    <string name="loginHelpPage">Having trouble loggin in? Read our help page</string>
    <string name="missionStatement2">LOCAL COMMUNITIES</string>
    <string name="appNameCapN">SciNFish</string>
    <string name="scinfishlogo">SciNFishLogo</string>
    <string name="i_am_a">I am a:</string>
    <string name="fisherfolk">Fisherfolk</string>
    <string name="scientist">Scientist</string>
    <string name="create_a_new_account">Create A New Account</string>
    <string name="username">Username:</string>
    <string name="submit">submit</string>
</resources>
